[tool.poetry]
name = "niche-utils"
version = "0.1.0"
description = "A collection of classes and functions too specific for an own repo."
authors = ["Jonas Peche <jonas.peche@aon.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fasteners = "^0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
